valet without region model init implementation
